--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dashmc": "file:",
     "gray-matter": "^4.0.3",
     "next": "14.2.13",
+    "next-auth": "^5.0.0-beta.22",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
     "react": "^18",
