--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "redis": "^4.7.0",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
