--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,6 @@ AUTH_TRUST_HOST="false"
 # Connection URL to your database. Supported technologies are MariaDB and MySQL.
 DATABASE_URL=""
 
-# Generated token that will be used by the Minecraft server/discord bot
-# to authenticate with the web-server, so they can verify OTP tokens.
+# Trusted token shared between the Minecraft server/discord bot and this
+# web-server, so they can verify OTP tokens.
 OTP_VERIFICATION_TOKEN=""
