--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ AUTH_GOOGLE_SECRET=""
 
 AUTH_DISCORD_ID=""
 AUTH_DISCORD_SECRET=""
+AUTH_DISCORD_TOKEN=""
 
 # Deploying behind a proxy such as NGINX? Set this to true.
 AUTH_TRUST_HOST="false"
