--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
 		"@prisma/client": "^5.20.0",
 		"@types/mdx": "^2.0.13",
 		"dashmc": "file:",
+		"dompurify": "^3.2.6",
 		"gray-matter": "^4.0.3",
+		"jsdom": "^27.0.0",
 		"next": "15.5.3",
 		"next-auth": "^5.0.0-beta.22",
 		"next-mdx-remote": "^5.0.0",
@@ -33,6 +35,7 @@
 		"sharp": "^0.33.5"
 	},
 	"devDependencies": {
+		"@types/jsdom": "^21.1.7",
 		"@types/node": "^20",
 		"@types/react": "19.1.13",
 		"@types/react-dom": "19.1.9",
